--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "A basic Login functionality for expressJs server.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm install express cookie-parser && npx jest"
   },
   "author": "AryanAg",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
