--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
